--- a/public/style.css
+++ b/public/style.css
@@ -2416,53 +2416,71 @@ table {
 .clients-main-container {
   height: 100vh;
   width: 100%; }
-  .clients-main-container .clients-h2-container {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    .clients-main-container .clients-h2-container h2 {
-      color: black;
-      font-size: 80px; }
-  .clients-main-container .clients-underline {
-    height: .75vh;
+  .clients-main-container .title-wrapper {
     width: 600px;
-    background-color: black;
-    margin-top: -5px;
     margin: 0 auto; }
+    .clients-main-container .title-wrapper h2 {
+      color: black;
+      font-size: 80px;
+      text-shadow: 0.04em 0.04em 0.1em black;
+      text-align: center; }
+    .clients-main-container .title-wrapper .clients-underline {
+      height: .75vh;
+      width: 100%;
+      background-color: black;
+      margin-top: 10px;
+      box-shadow: 0.1em 0.1em 0.5em black; }
   .clients-main-container .clients-search-bar {
     width: 520px;
     margin: 0 auto;
     margin-top: 40px; }
     .clients-main-container .clients-search-bar input {
       border: 1.5px solid black;
-      border-radius: 2px; }
+      border-radius: 2px;
+      box-shadow: 0 0 0.4em black;
+      transition: .4s; }
   .clients-main-container .clients-card-container {
     width: 600px;
     margin: 0 auto;
     margin-top: 40px; }
     .clients-main-container .clients-card-container ul {
-      height: 220px;
+      height: 250px;
       width: 600px;
-      background-color: black;
+      background-color: white;
       margin-bottom: 30px;
       padding: 20px;
-      border-radius: 5px; }
+      border: 2px solid black;
+      border-radius: 5px;
+      box-shadow: 0 0 1em black;
+      transition: .3s; }
       .clients-main-container .clients-card-container ul li {
-        color: white; }
+        height: 30px;
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s;
+        padding: 8px; }
       .clients-main-container .clients-card-container ul input {
-        border: 1.5px solid white;
-        border-radius: 2px;
-        color: white; }
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s; }
+      .clients-main-container .clients-card-container ul input:hover {
+        box-shadow: 0 0 0.4em black;
+        transition: .4s; }
       .clients-main-container .clients-card-container ul button {
         height: 30px;
         width: 140px;
-        border: 1.5px solid white;
         border-radius: 6px;
-        color: white; }
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s; }
+      .clients-main-container .clients-card-container ul button:hover {
+        box-shadow: 0 0 0.4em black;
+        transition: .4s; }
       .clients-main-container .clients-card-container ul span {
         margin-right: 10px; }
+    .clients-main-container .clients-card-container ul:hover {
+      box-shadow: 0 0 1.5em black;
+      transition: .4s; }
 
 button {
   background: none; }
@@ -2474,21 +2492,20 @@ button {
 .default-message-main-container {
   height: 100vh;
   width: 100%; }
-  .default-message-main-container .default-message-h2-container {
-    height: 10%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    .default-message-main-container .default-message-h2-container h2 {
-      color: black;
-      font-size: 80px; }
-  .default-message-main-container .default-message-underline {
-    height: .75vh;
-    width: 600px;
-    background-color: black;
-    margin-top: -5px;
+  .default-message-main-container .title-wrapper {
+    width: 700px;
     margin: 0 auto; }
+    .default-message-main-container .title-wrapper h2 {
+      color: black;
+      font-size: 80px;
+      text-shadow: 0.04em 0.04em 0.1em black;
+      text-align: center; }
+    .default-message-main-container .title-wrapper .default-message-underline {
+      height: .75vh;
+      width: 100%;
+      background-color: black;
+      margin-top: 10px;
+      box-shadow: 0.05em 0.05em 0.5em black; }
   .default-message-main-container .default-message-textarea-container {
     height: 170px;
     width: 100%;
@@ -2500,41 +2517,71 @@ button {
     .default-message-main-container .default-message-textarea-container textarea {
       border: 2px solid black;
       font-size: 20px;
-      margin-top: 15px; }
+      margin-top: 15px;
+      box-shadow: 0 0 0.3em black;
+      transition: .3s; }
+    .default-message-main-container .default-message-textarea-container textarea:hover {
+      box-shadow: 0 0 0.6em black;
+      transition: .4s; }
     .default-message-main-container .default-message-textarea-container button {
-      font-size: 25px;
+      font-size: 35px;
       margin-top: -10px;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      text-shadow: 0.02em 0.02em 0.04em black; }
+    .default-message-main-container .default-message-textarea-container .textarea-underline {
+      height: 2vh;
+      width: 600px;
+      background-color: black;
+      margin-top: 40px;
+      box-shadow: 0.05em 0.05em 0.5em black; }
   .default-message-main-container .default-message-card-container {
     width: 600px;
     margin: 0 auto;
     margin-top: 40px; }
     .default-message-main-container .default-message-card-container ul {
-      height: 175px;
+      height: 200px;
       width: 600px;
-      background-color: black;
+      background-color: white;
       margin-bottom: 30px;
       padding: 20px;
-      border-radius: 5px; }
+      border: 2px solid black;
+      border-radius: 5px;
+      box-shadow: 0 0 1em black;
+      transition: .3s; }
       .default-message-main-container .default-message-card-container ul li {
-        color: white; }
+        height: 30px;
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s;
+        padding: 8px; }
       .default-message-main-container .default-message-card-container ul input {
-        border: 1.5px solid white;
-        border-radius: 2px;
-        color: white; }
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s; }
+      .default-message-main-container .default-message-card-container ul input:hover {
+        box-shadow: 0 0 0.4em black;
+        transition: .4s; }
       .default-message-main-container .default-message-card-container ul button {
         height: 30px;
         width: 140px;
-        border: 1.5px solid white;
         border-radius: 6px;
-        color: white; }
+        color: black;
+        box-shadow: 0 0 0.2em black;
+        transition: .4s; }
+      .default-message-main-container .default-message-card-container ul button:hover {
+        box-shadow: 0 0 0.4em black;
+        transition: .4s; }
       .default-message-main-container .default-message-card-container ul span {
         margin-right: 10px; }
       .default-message-main-container .default-message-card-container ul .default-message-specifier {
         width: 165px;
-        color: white;
+        color: black;
         margin: 0 auto;
-        font-size: 20px; }
+        font-size: 20px;
+        transition: .4s; }
+    .default-message-main-container .default-message-card-container ul:hover {
+      box-shadow: 0 0 1.5em black;
+      transition: .4s; }
 
 button {
   background: none;
@@ -2629,37 +2676,35 @@ button {
       font-size: 60px;
       background: none;
       cursor: pointer;
-      margin-bottom: 70px; }
-  .mass-text-main-container button {
-    background: none; }
-  .mass-text-main-container h2 {
-    color: black;
-    font-size: 80px; }
-  .mass-text-main-container .mass-text-underline {
-    height: .75vh;
-    width: 100%;
-    background-color: black;
-    margin-top: -5px; }
-  .mass-text-main-container input {
-    height: 7vh;
-    width: 60%;
-    border-radius: 5px;
-    font-size: 30px;
-    border: 2px solid black; }
+      text-shadow: 0.02em 0.02em 0.08em black;
+      transition: .3s;
+      margin-bottom: 50px; }
+    .mass-text-main-container .mass-text-block-container button:hover {
+      text-shadow: 0.04em 0.04em 0.2em black;
+      transition: .4s; }
+  .mass-text-main-container .title-wrapper {
+    width: 600px; }
+    .mass-text-main-container .title-wrapper h2 {
+      color: black;
+      font-size: 80px;
+      text-shadow: 0.04em 0.04em 0.1em black;
+      text-align: center; }
+    .mass-text-main-container .title-wrapper .mass-text-underline {
+      height: 5px;
+      width: 100%;
+      background-color: black;
+      margin-top: 10px;
+      box-shadow: 0.1em 0.1em 0.5em black; }
   .mass-text-main-container textarea {
     font-size: 20px;
     margin-top: 30px;
     border: 2px solid black;
-    border-radius: 2px; }
-
-.name:hover {
-  text-align: center; }
-
-.phone:hover {
-  text-align: center; }
-
-.number:hover {
-  text-align: center; }
+    border-radius: 2px;
+    box-shadow: 0 0 0.3em black;
+    transition: .3s; }
+  .mass-text-main-container textarea:hover {
+    box-shadow: 0 0 0.6em black;
+    transition: .4s; }
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 * {
@@ -2784,16 +2829,19 @@ span:nth-child(2) {
     justify-content: space-around;
     align-items: center;
     margin: 0 auto; }
-  .newClient-main-container h2 {
-    color: black;
-    font-size: 80px;
-    text-shadow: 0.02em 0.02em 0.08em black; }
-  .newClient-main-container .newClient-underline {
-    height: .75vh;
-    width: 100%;
-    background-color: black;
-    margin-top: -100px;
-    box-shadow: 0.05em 0.05em 0.5em black; }
+    .newClient-main-container .newClient-block-container .title-wrapper {
+      width: 600px; }
+      .newClient-main-container .newClient-block-container .title-wrapper h2 {
+        color: black;
+        font-size: 80px;
+        text-shadow: 0.04em 0.04em 0.1em black;
+        text-align: center; }
+      .newClient-main-container .newClient-block-container .title-wrapper .newClient-underline {
+        height: .75vh;
+        width: 100%;
+        background-color: black;
+        margin-top: 10px;
+        box-shadow: 0.1em 0.1em 0.3em black; }
   .newClient-main-container input {
     height: 7vh;
     width: 60%;
