--- a/public/styles/massText.sass
+++ b/public/styles/massText.sass
@@ -19,34 +19,34 @@
       font-size: 60px
       background: none
       cursor: pointer
-      margin-bottom: 70px
-  button
-    background: none
-  h2
-    color: black
-    font-size: 80px
-  .mass-text-underline
-    height: .75vh
-    width: 100%
-    background-color: black
-    margin-top: -5px
-  input
-    height: 7vh
-    width: 60%
-    border-radius: 5px
-    font-size: 30px
-    border: 2px solid black
+      text-shadow: .02em .02em .08em rgba(0, 0, 0, 1)
+      transition: .3s
+      margin-bottom: 50px
+    button:hover
+      text-shadow: .04em .04em .2em rgba(0, 0, 0, 1)
+      transition: .4s
+  // button
+  //   background: none
+  .title-wrapper
+    width: 600px
+    h2
+      color: black
+      font-size: 80px
+      text-shadow: .04em .04em .1em rgba(0, 0, 0, 1)
+      text-align: center
+    .mass-text-underline
+      height: 5px
+      width: 100%
+      background-color: black
+      margin-top: 10px
+      box-shadow: .1em .1em .5em rgba(0, 0, 0, 1)
   textarea
     font-size: 20px
     margin-top: 30px
     border: 2px solid black
     border-radius: 2px
-
-.name:hover
-  text-align: center
-
-.phone:hover
-  text-align: center
-
-.number:hover
-  text-align: center
+    box-shadow: 0 0 .3em rgba(0, 0, 0, 1)
+    transition: .3s
+  textarea:hover
+    box-shadow: 0 0 .6em rgba(0, 0, 0, 1)
+    transition: .4s
