--- a/public/styles/newClient.sass
+++ b/public/styles/newClient.sass
@@ -132,17 +132,19 @@ span:nth-child(2)
     justify-content: space-around
     align-items: center
     margin: 0 auto
-
-  h2
-    color: black
-    font-size: 80px
-    text-shadow: .02em .02em .08em rgba(0, 0, 0, 1)
-  .newClient-underline
-    height: .75vh
-    width: 100%
-    background-color: black
-    margin-top: -100px
-    box-shadow: .05em .05em .5em rgba(0, 0, 0, 1)
+    .title-wrapper
+      width: 600px
+      h2
+        color: black
+        font-size: 80px
+        text-shadow: .04em .04em .1em rgba(0, 0, 0, 1)
+        text-align: center
+      .newClient-underline
+        height: .75vh
+        width: 100%
+        background-color: black
+        margin-top: 10px
+        box-shadow: .1em .1em .3em rgba(0, 0, 0, 1)
   input
     height: 7vh
     width: 60%
