--- a/public/views/massText-tmpl.html
+++ b/public/views/massText-tmpl.html
@@ -10,9 +10,10 @@
 </div>
 
   <div class="mass-text-block-container">
-
-    <h2 class="animated fadeInUpBig">MASS TEXT</h2>
-    <div class=" animated fadeInUpBig mass-text-underline"></div>
+    <div class="title-wrapper">
+      <h2 class="animated fadeInUpBig">MASS TEXT</h2>
+      <div class=" animated fadeInUpBig mass-text-underline"></div>
+    </div>
     <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea><br></br>
     <button class="animated fadeInUpBig" ng-click="sendText(numbers, message)">Send</button>
 
