--- a/public/views/newClient-tmpl.html
+++ b/public/views/newClient-tmpl.html
@@ -1,22 +1,24 @@
 <div class="newClient-main-container">
-  <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-  <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
+    <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
 
-</div>
+    </div>
 
     <div class="newClient-block-container">
-    <h2 class="animated fadeInUpBig">NEW CLIENT</h2>
-    <div class=" animated fadeInDownBig newClient-underline"></div>
-    <input class="name animated fadeInLeftBig" type="text" placeholder="Name" ng-model="newClient.name" />
-    <input class="phone animated fadeInDownBig" type="number" placeholder="Phone" ng-model="newClient.phone" />
-    <input class="number animated fadeInRightBig" type="number" placeholder="Number of Weeks" ng-model="newClient.number" />
-    <button class="animated fadeInDownBig" ng-click="createClients()">Save</button>
+        <div class="title-wrapper">
+          <h2 class="animated fadeInUpBig">NEW CLIENT</h2>
+          <div class=" animated fadeInDownBig newClient-underline"></div>
+        </div>
+        <input class="name animated fadeInLeftBig" type="text" placeholder="Name" ng-model="newClient.name" />
+        <input class="phone animated fadeInDownBig" type="number" placeholder="Phone" ng-model="newClient.phone" />
+        <input class="number animated fadeInRightBig" type="number" placeholder="Number of Weeks" ng-model="newClient.number" />
+        <button class="animated fadeInDownBig" ng-click="createClients()">Save</button>
 
-  </div>
+    </div>
 </div>
