--- a/public/views/csv-tmpl.html
+++ b/public/views/csv-tmpl.html
@@ -1,14 +1,29 @@
-<nav-bar-directive></nav-bar-directive>
-<h2>CSV</h2>
-<button type="file" ngf-select="uploadFiles($file, $invalidFiles)"
-          accept="text/csv" ngf-pattern="'.csv'" ngf-max-size="1MB">
-      Select File</button>
-  <br><br>
-  File:
-  <div style="font:smaller">{{f.name}} {{errFile.name}} {{errFile.$error}} {{errFile.$errorParam}}
-      <span class="progress" ng-show="f.progress >= 0">
-          <div style="width:{{f.progress}}%"
-               ng-bind="f.progress + '%'"></div>
-      </span>
-  </div>
-  {{errorMsg}}
+<div class="csv-main-container">
+    <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
+    </div>
+
+    <div class="csv-block-container">
+        <div class="animated fadeInDown title-wrapper">
+            <h2>CSV</h2>
+            <div class="csv-underline"></div>
+        </div>
+        <button type="file" ngf-select="uploadFiles($file, $invalidFiles)" accept="text/csv" ngf-pattern="'.csv'" ngf-max-size="1MB">
+            Select File</button>
+        <br>
+        <br>
+        <div class="progress-bar" style="font:smaller">{{f.name}} {{errFile.name}} {{errFile.$error}} {{errFile.$errorParam}}
+            <span class="progress" ng-show="f.progress >= 0">
+              <div style="width:{{f.progress}}%"
+                   ng-bind="f.progress + '%'"></div>
+          </span>
+        </div>
+    </div>
+</div>
+{{errorMsg}}
