--- a/public/views/login-tmpl.html
+++ b/public/views/login-tmpl.html
@@ -11,7 +11,7 @@
             <input class="email animated fadeInLeftBig" placeholder="Email" type="email" ng-model="user.email" required />
             <input class="password animated fadeInDownBig" placeholder="Password" type="password" ng-model="user.password" required />
             <button class="animated fadeInRightBig" type="submit">Login</button>
-            <button class="animated fadeInUpBig" ui-sref="register">Create an Account</button>
+            <button class="animated fadeInUpBig" ui-sref="register">Create Account</button>
         </form>
     </div>
 
