--- a/public/views/massText-tmpl.html
+++ b/public/views/massText-tmpl.html
@@ -1,21 +1,22 @@
 <div class="mass-text-main-container">
-  <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
-</div>
-
-  <div class="mass-text-block-container">
-    <div class="title-wrapper">
-      <h2 class="animated fadeInUpBig">MASS TEXT</h2>
-      <div class=" animated fadeInUpBig mass-text-underline"></div>
+    <div id="nav-icon" ng-class="{ 'open': isActive }" ng-click="activeButton()">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <nav-bar-directive class="nav" ng-class="{ 'nav-display': isActive }"></nav-bar-directive>
     </div>
-    <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea><br></br>
-    <button class="animated fadeInUpBig" ng-click="sendText(numbers, message)">Send</button>
 
-  </div>
+    <div class="mass-text-block-container">
+        <div class="title-wrapper">
+            <h2 class="animated fadeInUpBig">MASS TEXT</h2>
+            <div class=" animated fadeInUpBig mass-text-underline"></div>
+        </div>
+        <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea>
+        <br></br>
+        <button class="animated fadeInUpBig" ng-click="sendText(numbers, message)">Send</button>
+
+    </div>
 </div>
