--- a/public/styles/login.sass
+++ b/public/styles/login.sass
@@ -13,10 +13,6 @@
   background-color: black
   padding-top: 15px
 
-.login-block-container
-  height: 100vh
-  width: 40%
-
 .login-h1-container
   height: 13vh
   width: 100%
@@ -30,8 +26,13 @@
 
 .login-underline
   height: .75vh
-  width: 100%
+  width: 550px
   background-color: white
+  margin: 0 auto
+
+.login-block-container
+  height: 100vh
+  width: 100%
 
 .login-login
   height: 84.25vh
@@ -53,13 +54,9 @@
     cursor: pointer
   input
     height: 7vh
-    width: 60%
+    width: 400px
     border-radius: 2px
     font-size: 30px
-
-.login-login
-  input
-    transition: 1s
 
 .email:hover
   text-align: center
@@ -68,3 +65,37 @@
 .password:hover
   text-align: center
   transition: .7s
+
+
+.login-h1-container
+  @media(max-width: 575px)
+    h1
+      font-size: 70px
+.login-underline
+  @media(max-width: 575px)
+    width: 400px
+.login-login
+  @media(max-width: 575px)
+    input
+      height: 7vh
+      width: 300px
+      font-size: 25px
+    button
+      font-size: 50px
+
+
+.login-h1-container
+  @media(max-width: 425px)
+    h1
+      font-size: 60px
+.login-underline
+  @media(max-width: 425px)
+    width: 300px
+.login-login
+  @media(max-width: 425px)
+    input
+      height: 7vh
+      width: 200px
+      font-size: 20px
+    button
+      font-size: 40px
