--- a/public/styles/newClient.sass
+++ b/public/styles/newClient.sass
@@ -25,7 +25,8 @@
   float: right
   width: 60px
   height: 45px
-  position: relative
+  position: absolute
+  right: 5px
   z-index: 10
   -webkit-transform: rotate(0deg)
   -moz-transform: rotate(0deg)
@@ -126,7 +127,7 @@ span:nth-child(2)
   width: 100%
   .newClient-block-container
     height: 100%
-    width: 40%
+    width: 100%
     display: flex
     flex-direction: column
     justify-content: space-around
@@ -147,7 +148,7 @@ span:nth-child(2)
         box-shadow: .1em .1em .3em rgba(0, 0, 0, 1)
   input
     height: 7vh
-    width: 60%
+    width: 400px
     border-radius: 5px
     font-size: 30px
     border: 2px solid black
@@ -175,3 +176,53 @@ span:nth-child(2)
 
 .number:hover
   text-align: center
+
+.newClient-main-container
+  @media(max-width: 765px)
+    .newClient-block-container
+      .title-wrapper
+        width: 500px
+        h2
+          font-size: 70px
+      input
+        width: 300px
+        font-size: 25px
+      button
+        font-size: 50px
+
+.newClient-main-container
+  @media(max-width: 660px)
+    .newClient-block-container
+      .title-wrapper
+        width: 400px
+        h2
+          font-size: 60px
+    .nav-display
+      height: 95vh
+
+.newClient-main-container
+  @media(max-width: 570px)
+    .newClient-block-container
+      .title-wrapper
+        width: 300px
+        margin-top: 45px
+        h2
+          font-size: 45px
+      button
+        font-size: 40px
+    .nav-display
+      height: 95vh
+
+.newClient-main-container
+  @media(max-width: 339px)
+    .newClient-block-container
+      .title-wrapper
+        width: 300px
+        h2
+          font-size: 45px
+      input
+        width: 275px
+      button
+        font-size: 40px
+    .nav-display
+      height: 95vh
