--- a/public/views/navBar-tmpl.html
+++ b/public/views/navBar-tmpl.html
@@ -1,4 +1,4 @@
-<button ng-class="faded" ng-hide="hidden" ui-sref="newClient"><h3>New Client</h3></button>
+<button style="padding-top: 10px" ng-class="faded" ng-hide="hidden" ui-sref="newClient"><h3>New Client</h3></button>
 <button ng-class="faded" ng-hide="hidden" ui-sref="massText"><h3>Mass Text</h3></button>
 <button ng-class="faded" ng-hide="hidden" ui-sref="clients"><h3>Clients</h3></button>
 <button ng-class="faded" ng-hide="hidden" ui-sref="defaultMessage"><h3>Default Promotion</h3></button>
