--- a/public/styles/clients.sass
+++ b/public/styles/clients.sass
@@ -2,7 +2,9 @@
 
 *
   font-family: 'Montserrat', sans-serif
-
+body
+  width: 100vw
+  overflow-x: hidden
 .clients-main-container
   height: 100vh
   width: 100%
