--- a/public/styles/clients.sass
+++ b/public/styles/clients.sass
@@ -79,3 +79,14 @@ body
 
 button
   background: none
+
+
+// .clients-main-container
+//   @media(max-width: 750px)
+//     .title-wrapper
+//       width: 500px
+//       margin-top: 60px
+//     .clients-card-container
+//       width: 500px
+//       ul
+//         width: 500px
