--- a/public/views/massText-tmpl.html
+++ b/public/views/massText-tmpl.html
@@ -14,7 +14,7 @@
             <h2 class="animated fadeInUpBig">MASS TEXT</h2>
             <div class=" animated fadeInUpBig mass-text-underline"></div>
         </div>
-        <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here" rows="25" cols="65"></textarea>
+        <textarea class="animated fadeInDownBig" ng-model="message" placeholder="Write Message Here"></textarea>
         <br></br>
         <button class="animated fadeInUpBig" ng-click="sendText(numbers, message)">Send</button>
 
