--- a/public/styles/massText.sass
+++ b/public/styles/massText.sass
@@ -8,7 +8,7 @@
   width: 100%
   .mass-text-block-container
     height: 100%
-    width: 40%
+    width: 100%
     display: flex
     flex-direction: column
     justify-content: space-around
@@ -41,6 +41,8 @@
       margin-top: 10px
       box-shadow: .1em .1em .5em rgba(0, 0, 0, 1)
   textarea
+    height: 600px
+    width: 600px
     font-size: 20px
     margin-top: 30px
     border: 2px solid black
@@ -50,3 +52,42 @@
   textarea:hover
     box-shadow: 0 0 .6em rgba(0, 0, 0, 1)
     transition: .4s
+
+.mass-text-main-container
+  @media(max-width: 764px)
+    .mass-text-block-container
+      .title-wrapper
+        width: 500px
+        h2
+          font-size: 70px
+      textarea
+        height: 500px
+        width: 500px
+
+.mass-text-main-container
+  @media(max-width: 658px)
+    .mass-text-block-container
+      .title-wrapper
+        width: 420px
+        margin-top: 55px
+        h2
+          font-size: 60px
+      textarea
+        height: 400px
+        width: 400px
+      button
+        font-size: 50px
+
+.mass-text-main-container
+  @media(max-width: 460px)
+    .mass-text-block-container
+      .title-wrapper
+        width: 300px
+        margin-top: 65px
+        h2
+          font-size: 50px
+      textarea
+        height: 300px
+        width: 250px
+      button
+        font-size: 50px
